logs/submissions/000001
Started judging at 2020-02-07 20:56:57.296928

Problem ID: 1
Language: cpp
User ID: 1

Compilation code: 1
Compilation output:
participant.cpp:1:1: error: 'import' does not name a type; did you mean 'short'?
 import kotlin.math.absoluteValue
 ^~~~~~
 short
participant.cpp:9:7: error: 'Polynom' is not a class template
 class Polynom<T : > (var ai: List<T>) {
       ^~~~~~~
participant.cpp:9:15: error: 'T' was not declared in this scope
 class Polynom<T : > (var ai: List<T>) {
               ^
participant.cpp:9:26: error: expected ')' before 'ai'
 class Polynom<T : > (var ai: List<T>) {
                          ^~
participant.cpp:28:1: error: 'abstract' does not name a type; did you mean 'struct'?
 abstract class Pair<T> (var _x: T, var _y: T) {
 ^~~~~~~~
 struct
participant.cpp:40:20: error: expected ')' before 'x'
 class IntPair (var x: Int, var y: Int) : Pair<Int>(x, y) {
                    ^
participant.cpp:62:1: error: 'fun' does not name a type
 fun testIntPair() {
 ^~~
participant.cpp:72:1: error: 'fun' does not name a type
 fun testOperatorOverride() {
 ^~~
participant.cpp:76:1: error: 'fun' does not name a type
 fun main()
 ^~~



Submission status: CE
Submission score: 0

